force-app/main/default/objects/copado__Compliance_Scan_Result__c/fields/copado__Deployment__c.field-meta.xml
<CustomField>
    <fullName>copado__Deployment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deployment</label>
    <referenceTo>copado__Deployment__c</referenceTo>
    <relationshipLabel>Compliance Scan Results</relationshipLabel>
    <relationshipName>Compliance_Scan_Results</relationshipName>
    <type>Lookup</type>
</CustomField>