force-app/main/default/objects/copado__Compliance_Scan_Result__c/fields/copado__Highest_Rule_Action__c.field-meta.xml
<CustomField>
    <fullName>copado__Highest_Rule_Action__c</fullName>
    <description>The most severe action in the Compliance Findings.</description>
    <inlineHelpText>The most severe action in the Compliance Findings.</inlineHelpText>
    <label>Highest Rule Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>copado__Compliance_Action</valueSetName>
    </valueSet>
</CustomField>