force-app/main/default/objects/copado__Compliance_Scan_Result__c/fields/copado__Highest_Severity__c.field-meta.xml
<CustomField>
    <fullName>copado__Highest_Severity__c</fullName>
    <description>Highest Severity of the Compliance Findings.</description>
    <inlineHelpText>Highest Severity of the Compliance Findings.</inlineHelpText>
    <label>Highest Severity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>copado__Compliance_Severity</valueSetName>
    </valueSet>
</CustomField>