force-app/main/default/objects/copado__Compliance_Scan_Result__c/fields/copado__Scan_End__c.field-meta.xml
<CustomField>
    <fullName>copado__Scan_End__c</fullName>
    <label>Scan End</label>
    <type>DateTime</type>
</CustomField>