force-app/main/default/objects/copado__Compliance_Scan_Result__c/fields/copado__Status__c.field-meta.xml
<CustomField>
    <fullName>copado__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
                <default>true</default>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Completed - No Findings</fullName>
            </value>
            <value>
                <fullName>Completed - Findings detected</fullName>
            </value>
            <value>
                <fullName>Completed - Resolved</fullName>
            </value>
            <value>
                <fullName>Under Investigation</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>