force-app/main/default/objects/copado__Compliance_Scan_Result__c/fields/copado__User_Story__c.field-meta.xml
<CustomField>
    <fullName>copado__User_Story__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Story</label>
    <referenceTo>copado__User_Story__c</referenceTo>
    <relationshipLabel>Compliance Scan Results</relationshipLabel>
    <relationshipName>Compliance_Scan_Results</relationshipName>
    <type>Lookup</type>
</CustomField>